--- a/Source/AppEngine Files/padccr-files/About.html
+++ b/Source/AppEngine Files/padccr-files/About.html
@@ -36,6 +36,9 @@
                 font-size: 3em;
                 margin-top: -1px;
             }
+            img {
+            	border:none;
+            }
         </style>
     </head>
 
