--- a/Source/AppEngine Files/padccr-files/About.html
+++ b/Source/AppEngine Files/padccr-files/About.html
@@ -37,7 +37,13 @@
                 margin-top: -1px;
             }
             img {
-            	border:none;
+                border: none;
+            }
+            h1, h2, ul {
+                text-align: left;
+            }
+            p {
+                text-align: justify;
             }
         </style>
     </head>
@@ -47,10 +53,40 @@
             <header>
                 <a href=".">
                     <img src="Logo.png" alt="Praxiteles Algorithm Design" /></a></header>
+            <h1>
+                About Us</h1>
             <h2>
-                About Us</h2>
+                Our Mission:
+            </h2>
             <p>
-                We will eventually have content here.</p>
+                Praxiteles Algorithm Designs LLC (Prax) is an algorithm and software development
+                company that is designing and developing high-quality pattern recognition software.
+            </p>
+            <h2>
+                Our Method:
+            </h2>
+            <p>
+                Amichai Levy and Sammy Steiner assembled a team of ambitious, innovative, and resourceful
+                problem solvers and programmers to spearhead innovation for a new generation of
+                human-computer interface and algorithmic capabilities. Prax emphasizes creativity,
+                cooperation, and inspiration to effectively collaborate and efficiently develop
+                great software.
+            </p>
+            <h2>
+                Our Software:
+            </h2>
+            <p>
+                Prax’s pattern recognition algorithm offers an exciting new approach to the problem
+                of pattern recognition. Prax’s algorithm can be extended to image, video and speech
+                recognition, effectively teaching computers and devices to understand real world
+                patterns and complex forms of input.
+            </p>
+            <ul>
+                <li>To find out more about our business click here for our full Business Plan </li>
+                <li>To learn more about our software click here for a write up of our prototypes
+                </li>
+                <li>To try our our demo click here.</li>
+            </ul>
         </div>
     </body>
 
