--- a/Source/AppEngine Files/padccr-files/Index.html
+++ b/Source/AppEngine Files/padccr-files/Index.html
@@ -54,8 +54,8 @@
         <div class="Content">
             <header>
                 <img src="Logo.png" alt="Praxiteles Algorithm Design" /></header>
-            <div class="Links"><a href="http://blog.padocr.com">Blog</a> &middot; <a href="About">
-                About</a></div>
+            <div class="Links"><a href="http://blog.padocr.com">Blog</a> &middot; <a href="http://blog.padocr.com/p/loading.html">
+                Contact</a></div>
         </div>
     </body>
 
